--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,11 @@
     <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="vickysled">
    </head>
   <body>
-    {% include header.html %}
+    <header class="center" role="banner">
+      <div class="wrapper">
+        <a class="site-title" rel="author" href="/">я говорю хэй</a>
+      </div>
+     </header>
     <main>
       {{ content }}
     </main>
