--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@
       <div class="wrapper">
         <a class="site-title" rel="author" href="/">я говорю хэй</a>
       </div>
+      <nav>
+        <ul>
+          <li><a href="{{ site.baseurl }}/watching">смотрю</a></li>
+        </ul>
+      </nav>
      </header>
     <main>
       {{ content }}
