--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,17 +22,7 @@
       </nav>
      </header>
     <main>
-      <div class="home">
-        <h2 class="post-list-heading">_______</h2>
-        <ul class="post-list">
-          <li>
-            ::marker
-            <h3>
-              <a class="post-link" "href"=/first_post/>да будет первый пост </a>
-            </h3>
-        </li>
-      </ul>
-    </div>
+     {{ content }}
     </main>
   </body>
 </html>
