--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
     </title>
     <meta property="og:title" content="vickysled блог">
     <meta property="og:site_name" content="vickysled">
-    <link rel="stylesheet" href="/_site/assets/main.css">
+    <link rel="stylesheet" href="/assets/main.css">
     <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="vickysled блог">
