--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% for post in paginator.posts %}
+{% for post in site.posts %}
   <article>
     <header>
       <span class="post-date-tags">
