--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
   <h1>vickysled блог</h1>
 <nav>
         <ul>
+          <li><a href="{{ site.baseurl }}/">посты</a></li>
           <li><a href="{{ site.baseurl }}/watching">смотрю</a></li>
         </ul>
       </nav>
