--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: default
 <article>
   <header>
     <h1>{{ page.title }}</h1>
-    <span class="post-date-tags">🗓️
+    <span class="post-date-tags">
       {{ page.date | date: "%d/%m/%Y" }}
-      {% if page.tags %} | 🏷️
+      {% if page.tags %}
         {% for tag in page.tags %}
           <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}">{{ tag }}</a>{% if forloop.last %}{% else %},{% endif %}
         {% endfor %}
