--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
-    <title>
-      vickysled блог
-    </title>
-    <meta property="og:title" content="vickysled блог">
-    <meta property="og:site_name" content="vickysled">
-    <link rel="stylesheet" href="/assets/main.css">
-    <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="vickysled блог">
+<title>
+  vickysled блог
+</title>
+<meta property="og:title" content="vickysled блог">
+<meta property="og:site_name" content="vickysled">
+<link rel="stylesheet" href="/assets/retro.css">
+<link type="application/atom+xml" rel="alternate" href="/feed.xml" title="vickysled блог">
