--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header>
   <h1>vickysled блог</h1>
 <nav>
-        <ul>
-          <li><a href="{{ site.baseurl }}/watching">смотрю</a></li>
-        </ul>
-      </nav>
-     </header>
+  <ul>
+    <li><a href="/">главная</a></li>
+    <li><a href="{{ site.baseurl }}/watching">смотрю</a></li>
+  </ul>
+</nav>
+</header>
