--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 
-{% for post in paginator.posts %}
+{% for post in site.posts %}
   <article>
     <header>
-      <span class="post-date-tags">
+      <h1><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
+      <span class="post-date-tags">🗓️
         {{ post.date | date: "%d/%m/%Y" }}
       </span>
-      <h1><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
     </header>
     <div>
       {{ post.content }}
