--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
       </span>
     </header>
     <div>
-      {{ post.content }}
+      {{ post.title }}
     </div>
   </article>
   <hr>
