--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <title>
-  vickysled блог
+  vickysled говорит хэй!
 </title>
 <meta property="og:title" content="vickysled блог">
 <meta property="og:site_name" content="vickysled">
