--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>vickysled блог</h1>
+  <h1>vickysled говорит хэй!</h1>
 <nav>
   <ul>
     <li><a href="{{ site.baseurl }}/">посты</a></li>
