--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<img src="{{ site.url }}/assets/images/eating-ramen.gif" width = "128" height = "72">
+
 {% for post in site.posts %}
   <article>
     <header>
