--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-
-<img src="{{ site.url }}/assets/images/eating-ramen.gif" width = "384" height = "216">
+<figure>
+  <img src="{{ site.url }}/assets/images/eating-ramen.gif" align = "middle" width = "384" height = "216" alt = "ramen gif">
+ </figure>
 
 {% for post in site.posts %}
   <article>
