--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,6 @@
 </title>
 <meta property="og:title" content="vickysled блог">
 <meta property="og:site_name" content="vickysled">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/assets/retro.css">
 <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="vickysled блог">
