--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <figure>
-  <img src="{{ site.url }}/assets/images/eating-ramen.gif" align = "middle" width = "384" height = "216" alt = "ramen gif">
+  <img src="{{ site.url }}/assets/images/eating-ramen.gif" align = "middle" width = "384" height = "216" alt = "ramen gif" style={max-width:384px;}/>
  </figure>
 
 {% for post in site.posts %}
